--- a/localization/jpn/AigisMod-UI-Strings.json
+++ b/localization/jpn/AigisMod-UI-Strings.json
@@ -3,7 +3,7 @@
     "TEXT": [
       "ウィッチ", "敵に攻撃した時、一時的に #yスロー を与える。",
       "アーチャー", "このカードはトゲのような #y攻撃時 に発動する能力を #b無視 する。",
-      "プリンセス", "あなたのデッキに #yプリンセス カードを1枚加えた時、 #y最大 #yHP が #b1 増加する。",
+      "プリンセス", "あなたのデッキに #yプリンセス カードを1枚加えた時、 #y最大 #yHP が #b2 増加する。",
       "アンデッド", "このクラスは #y廃棄 された時 #b追加 効果が発動する。",
       "レアリティブラック", "このタイプのキャラクターは、 #yアップグレード の際に #y分岐 することがある。この特性は、レアカードだけが持つ。",
       "東の国", "このカードは #y東の国 を指名する効果の対象となる。",
@@ -124,6 +124,12 @@
   "KagerouAction": {
     "TEXT": [
       "捨てる"
+    ]
+  },
+
+  "SanmotoAction": {
+    "TEXT": [
+      "play."
     ]
   },
 
@@ -333,6 +339,18 @@
       "手札に加えるカードを1枚選ぶ",
       "手札に加えるカードを選ぶ",
       "山札に封印解除カードがない…"
+    ]
+  },
+
+  "ShinatoAction": {
+    "TEXT": [
+      "山札に戻するカードを1枚選ぶ"
+    ]
+  },
+
+  "ShukaAction": {
+    "TEXT": [
+      "東の国カード ", " 枚まで選ぶ"
     ]
   }
 }
